Offering rune - part 2

--- a/Resources/Prototypes/Magic/Fixtures/cult_runes.yml
+++ b/Resources/Prototypes/Magic/Fixtures/cult_runes.yml
@@ -9,6 +9,7 @@
       layers:
         - state: cult2
           color: '#FF00FF'
-    - type: CultOfferingRune
+    - type: CultRuneBase
       invokePhrase: "LOOOOOOL"
+    - type: CultRuneOffering
 
