--- a/Resources/Prototypes/Magic/Fixtures/cult_runes.yml
+++ b/Resources/Prototypes/Magic/Fixtures/cult_runes.yml
@@ -10,6 +10,6 @@
         - state: cult2
           color: '#FF00FF'
     - type: CultRuneBase
-      invokePhrase: "LOOOOOOL"
+      invokePhrase: "Bla Bla Bla"
     - type: CultRuneOffering
 
