--- a/Resources/Prototypes/Stacks/Materials/materials.yml
+++ b/Resources/Prototypes/Stacks/Materials/materials.yml
@@ -39,3 +39,10 @@
   icon: { sprite: /Textures/Objects/Materials/materials.rsi, state: cotton }
   spawn: MaterialCotton1
   maxCount: 30
+
+- type: stack
+  id: RunedMetal
+  name: runed metal
+  icon: { sprite: /Textures/Objects/Materials/materials.rsi, state: runed_metal }
+  spawn: MaterialRunedMetal1
+  maxCount: 30
