--- a/Resources/Prototypes/Entities/Objects/Specific/Cult/dagger.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Cult/dagger.yml
@@ -14,6 +14,9 @@
   - type: RitualDagger
   - type: UseDelay
     delay: 10.0
+  - type: Tool
+    qualities:
+      - Cursing
   ##- type: UserInterface
   ##  interfaces:
   ##  - key: 
