--- a/Resources/Prototypes/Entities/Structures/Walls/walls.yml
+++ b/Resources/Prototypes/Entities/Structures/Walls/walls.yml
@@ -143,6 +143,7 @@
   parent: BaseWall
   id: WallCult
   name: cult wall
+  description: A cold metal wall engraved with indecipherable symbols. Studying them causes your head to pound.
   components:
   - type: Tag
     tags:
@@ -156,11 +157,11 @@
     thresholds:
     - trigger:
         !type:DamageTrigger
-        damage: 300
+        damage: 400
       behaviors:
       - !type:SpawnEntitiesBehavior
         spawn:
-          Girder:
+          CultGirder:
             min: 1
             max: 1
       - !type:DoActsBehavior
