--- a/Resources/Prototypes/tool_qualities.yml
+++ b/Resources/Prototypes/tool_qualities.yml
@@ -53,3 +53,10 @@
   toolName: tool-quality-sawing-tool-name
   spawn: Saw
   icon: { sprite: Objects/Specific/Medical/Surgery/saw.rsi, state: saw }
+
+- type: tool
+  id: Cursing
+  name: tool-quality-ritual-dagger-name
+  toolName: tool-quality-ritual-dagger-tool-name
+  spawn: RitualDagger
+  icon: { sprite: Objects/Tools/wrench.rsi, state: icon }
